--01:36:05--  http://celtel.afribone.net.gn:80/
           => `celtel.afribone.net.gn/index.html'
Connecting to celtel.afribone.net.gn:80... connected!
HTTP request sent, awaiting response... 200 OK
Length: 2,458 [text/html]

    0K -> ..                                                     [100%]

01:36:09 (68.58 KB/s) - `celtel.afribone.net.gn/index.html' saved [2458/2458]

Loading robots.txt; please ignore errors.
--01:36:09--  http://celtel.afribone.net.gn:80/no-robots.txt
           => `celtel.afribone.net.gn/no-robots.txt'
Connecting to celtel.afribone.net.gn:80... connected!
HTTP request sent, awaiting response... 404 Not Found
01:36:11 ERROR 404: Not Found.

--01:36:11--  http://celtel.afribone.net.gn:80/logo.jpg
           => `celtel.afribone.net.gn/logo.jpg'
Connecting to celtel.afribone.net.gn:80... connected!
HTTP request sent, awaiting response... 200 OK
Length: 27,040 [image/jpeg]

    0K -> .......... .......... ......                           [100%]

01:36:20 (5.11 KB/s) - `celtel.afribone.net.gn/logo.jpg' saved [27040/27040]

--01:36:20--  http://celtel.afribone.net.gn:80/ind.gif
           => `celtel.afribone.net.gn/ind.gif'
Connecting to celtel.afribone.net.gn:80... connected!
HTTP request sent, awaiting response... 200 OK
Length: 15,276 [image/gif]

    0K -> .......... ....                                        [100%]

01:36:24 (5.94 KB/s) - `celtel.afribone.net.gn/ind.gif' saved [15276/15276]

--01:36:24--  http://celtel.afribone.net.gn:80/here.jpg
           => `celtel.afribone.net.gn/here.jpg'
Connecting to celtel.afribone.net.gn:80... connected!
HTTP request sent, awaiting response... 200 OK
Length: 2,066 [image/jpeg]

    0K -> ..                                                     [100%]

01:36:30 (458.19 B/s) - `celtel.afribone.net.gn/here.jpg' saved [2066/2066]

Converting celtel.afribone.net.gn/index.html... done.

FINISHED --01:36:30--
Downloaded: 46,840 bytes in 4 files
Converting celtel.afribone.net.gn/index.html... done.
